# Formats

./: .gitmodules  CMakeLists.txt
Formats/: CMakeLists.txt  Formats.cpp  Formats.h
Private/Formats/: Resource.cpp
Private/Formats/Resources/: AAMP.cpp  BFRES.cpp  BYML.cpp  Resource.cpp
Private/Formats/Resources/AAMP/: AAMP.cpp
Private/Formats/Resources/BFRES/: BFRES.cpp
Private/Formats/Resources/BFRES_Versions/: 0.10.0.0.cpp
Private/Formats/Resources/BYML/: BYML.cpp
Private/Formats/Resources/BYML_Versions/: 7.cpp
Private/Formats/Resources/Binary/: Binary.cpp
Private/Formats/Resources/MeshCodec/: MeshCodec.cpp
Private/Formats/Resources/TXTG/: TXTG.cpp
Private/Formats/Resources/ZSTD/: ZSTDBackend.cpp
Private/Formats/Texture/: Format.cpp
Private/Formats/Utils/: String.cpp
Public/Formats/: Resource.h
Public/Formats/Aliases/: Primitives.h
Public/Formats/IO/: BinaryIOStream.h  BinaryIOStreamBasic.h  EndianReader.h  Endianness.h  PartialStream.h  Stream.h
Public/Formats/IO/BinaryIOStream_Versions/: Big.h  Little.h
Public/Formats/Primitives/: Int24.h  UInt24.h
Public/Formats/Resources/: AAMP.h  BFRES.h  BYML.h  Resource.h
Public/Formats/Resources/AAMP/: AAMP.h
Public/Formats/Resources/BFRES/: BFRES.h
Public/Formats/Resources/BFRES_Versions/: 0.10.0.0.h
Public/Formats/Resources/BYML/: BYML.h  Node.h
Public/Formats/Resources/BYML_Versions/: 7.h
Public/Formats/Resources/Binary/: Binary.h
Public/Formats/Resources/TXTG/: TXTG.h  (+1 more)
Public/Formats/Swizzling/: Format.h
Public/Formats/Texture/: Format.h
Public/Formats/Utils/: String.h
(+113 files in other folders)
